# focoos-apps

./: Dockerfile  README.md  pyproject.toml
.devcontainer/cpu/: devcontainer.json
.devcontainer/gpu/: devcontainer.json
.devcontainer/tensorrt/: devcontainer.json
focoos_apps/: __init__.py
focoos_apps/apps/: __init__.py
focoos_apps/apps/smart_parking/: README.md  __init__.py  smart_parking.py
focoos_apps/cli/: __init__.py  cli.py  main.py
focoos_apps/core/: __init__.py  app_base.py
focoos_apps/core/io/: __init__.py  video_processor.py
tutorials/: smart_parking.ipynb
