[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "focoos-apps"
version = "0.1.0"
description = "Vertical applications built on top of the Focoos AI SDK"
authors = [{ name = "focoos.ai", email = "info@focoos.ai" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "opencv-python>=4.8",
  "Pillow>=10.2.0",
  "numpy>=2.2.6",
  "rich>=13.0.0",
  "typer>=0.16.0",
  "focoos @ git+https://github.com/FocoosAI/focoos.git",
]

[project.optional-dependencies]
onnx-cpu = [
  "focoos[onnx-cpu] @ git+https://github.com/FocoosAI/focoos.git",
]
onnx-gpu = [
  "focoos[onnx] @ git+https://github.com/FocoosAI/focoos.git",
]
tensorrt = [
  "focoos[onnx, tensorrt] @ git+https://github.com/FocoosAI/focoos.git",
]

[project.scripts]
focoos-apps = "focoos_apps.cli.cli:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["focoos_apps*"]

